force-app/main/default/objects/Zoom_Configuration_Settings__c/Zoom_Configuration_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>It contains the zoom account configuration setting and API details</description>
    <label>Zoom Configuration Settings</label>
</CustomObject>