force-app/main/default/objects/Zoom_Configuration_Settings__c/fields/Crypto_Key__c.field-meta.xml
<CustomField>
    <fullName>Crypto_Key__c</fullName>
    <description>It contains a crypto key to encrypt and decrypt the record id</description>
    <inlineHelpText>It contains a crypto key to encrypt and decrypt the record id</inlineHelpText>
    <label>Crypto Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>