force-app/main/default/objects/Zoom_Configuration_Settings__c/fields/Email_Sender_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Sender_Name__c</fullName>
    <description>It contains the sender name of the event invitation email</description>
    <inlineHelpText>It contains the sender name of the event invitation email</inlineHelpText>
    <label>Email Sender Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>