force-app/main/default/objects/Zoom_Configuration_Settings__c/fields/Enforce_Login__c.field-meta.xml
<CustomField>
    <fullName>Enforce_Login__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It contains the setting whether the attendee should be logged in</description>
    <inlineHelpText>It contains the setting whether the attendee should be logged in</inlineHelpText>
    <label>Enforce Login</label>
    <type>Checkbox</type>
</CustomField>