force-app/main/default/objects/Zoom_Configuration_Settings__c/fields/Send_Thank_you_email_notification__c.field-meta.xml
<CustomField>
    <fullName>Send_Thank_you_email_notification__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send Thank you email notification</label>
    <type>Checkbox</type>
</CustomField>