force-app/main/default/objects/Zoom_Configuration_Settings__c/fields/Share_Recording_URL__c.field-meta.xml
<CustomField>
    <fullName>Share_Recording_URL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It enables to send the recording URL in the Thank you an email notification. The Thank you email notification should be enabled for this feature to work.</description>
    <inlineHelpText>It enables to send the recording URL in the Thank you an email notification. The Thank you email notification should be enabled for this feature to work.</inlineHelpText>
    <label>Share Recording URL</label>
    <type>Checkbox</type>
</CustomField>