force-app/main/default/objects/Zoom_Configuration_Settings__c/fields/Share_Survey_Link__c.field-meta.xml
<CustomField>
    <fullName>Share_Survey_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It enables to send the survey link in the Thank you email notification.</description>
    <inlineHelpText>It enables to send the survey link in the Thank you email notification. The Thank you email notification should be enabled for this feature to work.</inlineHelpText>
    <label>Share Survey Link</label>
    <type>Checkbox</type>
</CustomField>