force-app/main/default/objects/Zoom_Configuration_Settings__c/fields/Start_Participant_Video_on_Join__c.field-meta.xml
<CustomField>
    <fullName>Start_Participant_Video_on_Join__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It contains the setting whether participant video should start on joining</description>
    <inlineHelpText>It contains the setting whether participant video should start on joining</inlineHelpText>
    <label>Start Participant Video on Join</label>
    <type>Checkbox</type>
</CustomField>