force-app/main/default/objects/Zoom_Configuration_Settings__c/fields/Zoom_Account_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Account_User_Id__c</fullName>
    <description>It saves configured zoom account user id</description>
    <inlineHelpText>It saves configured zoom account user id</inlineHelpText>
    <label>Zoom Account User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>