force-app/main/default/objects/Zoom_Configuration_Settings__c/fields/Zoom_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Zoom_API_Key__c</fullName>
    <description>It contains Zoom API Key</description>
    <inlineHelpText>It contains Zoom API Key</inlineHelpText>
    <label>Zoom API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>