force-app/main/default/objects/Zoom_Configuration_Settings__c/fields/Zoom_API_Secret__c.field-meta.xml
<CustomField>
    <fullName>Zoom_API_Secret__c</fullName>
    <description>It Contains the Zoom API secret</description>
    <inlineHelpText>It Contains the Zoom API secret</inlineHelpText>
    <label>Zoom API Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>