force-app/main/default/objects/Zoom_Configuration_Settings__c/fields/Zoom_Authorization_Token__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Authorization_Token__c</fullName>
    <description>It stores authorization token to call the Zoom API</description>
    <inlineHelpText>It stores authorization token to call the Zoom API</inlineHelpText>
    <label>Zoom Authorization Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>