force-app/main/default/objects/Zoom_Configuration_Settings__c/fields/Zoom_URL__c.field-meta.xml
<CustomField>
    <fullName>Zoom_URL__c</fullName>
    <description>It contains the Zoom org URL</description>
    <inlineHelpText>It contains the Zoom org URL</inlineHelpText>
    <label>Zoom URL</label>
    <type>Url</type>
</CustomField>